Convert to React

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "dev": "wrangler dev",
     "predeploy": "wrangler d1 migrations apply DB --remote",
     "seedLocalD1": "wrangler d1 migrations apply DB --local",
-    "types": "wrangler types"
+    "types": "wrangler types",
+    "frontend:dev": "cd frontend && npm run dev",
+    "frontend:build": "cd frontend && npm run build",
+    "frontend:install": "cd frontend && npm install"
   },
   "dependencies": {
     "duolingo": "file:"
